chore: Unit test and integration test for simple flow